# derivean

./: .editorconfig-nope  .gitignore  .prettierrc.mjs  .syncpackrc  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json  translations.ts  turbo.json
.github/workflows/: build.yml
apps/derivean/: .env  .env.development  .eslintrc.cjs  .gitignore  README.md  next.config.mjs  package.json  postcss.config.js  tailwind.config.ts  transpile.mjs  tsconfig.json  uno.config.ts  vite.config.ts
apps/derivean/cli/: migration.ts  translations.ts
apps/derivean/migration/: 2023-11-02-initial.ts  2023-11-03-00_item.ts  2023-11-03-00_resource.ts  2023-11-03-01_producer.ts  2023-11-03-02-inventory.ts  2023-11-03-03-building.ts  2023-11-03-03-kingdom.ts  2023-11-03-04_producer.ts  2023-11-03-05-building.ts  2023-11-03-06-event.ts  2023-11-13-00-kingdom.ts  2023-11-14-00-building-without-inventory.ts  2023-11-15-00-hero.ts  2023-11-15-01-event-hero.ts
apps/derivean/public/: manifest.json
apps/derivean/src/: _route.ts  container.ts  entry.dev.tsx  entry.preview.tsx  entry.ssr.tsx  env.ts  global.css  locales.ts  main.tsx  middleware.ts  redirects.ts  root.tsx
apps/derivean/src/@routes/: $locale.tsx  __root.tsx
bundle/: 2023-11-19-server.txt  2023-11-19.txt  2023-11-21.txt  2023-11-22.txt  README.md
lib/chunk/: Cargo.toml  README.md
lib/chunk/src/: lib.rs
lib/engine/: Cargo.toml  package.json
lib/engine/src/: lib.rs
lib/engine/src/derivean/: engine.rs  mod.rs  noise.rs  utils.rs
lib/noise-wasm/: Cargo.toml  package.json
lib/noise-wasm/src/: lib.rs
lib/terrain-wasm/: Cargo.toml  package.json
lib/terrain-wasm/src/: engine.rs  lib.rs  noise.rs  utils.rs
wasm/chunk/: Cargo.toml  package.json
wasm/chunk/src/generator/: tile.rs
(+340 files in other folders)
