[package]
name = "engine"
version = "0.5.0"
edition = "2024"
description = "Low-level engine for DeRivean, the stuff that need to be fuckin' fast"
authors = ["Marek Hanzal <marek.hanzal@icloud.com>"]
license = "MIT"
repository = "git://github.com/marek-hanzal/derivean.git"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
serde = { version = "1.0.218", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
noise = "0.9.0"
