[package]
name = "terrain-wasm"
version = "0.5.0"
edition = "2024"
description = "Terrain generator for DeRivean"
authors = ["Marek Hanzal <marek.hanzal@icloud.com>"]
license = "MIT"
repository = "git://github.com/marek-hanzal/derivean.git"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2.100"
noise = "^0.9.0"
console_error_panic_hook = "0.1.7"
